--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
     <!-- FONTS -->
     <!-- font-family: 'Crimson Pro', serif;
-    font-family: 'Parisienne', cursive;
     font-family: 'Tillana', cursive; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Parisienne&family=Tillana:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Tillana:wght@800&display=swap" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
@@ -35,6 +34,7 @@
     <!-- Carousel -->
 
     <div id="carouselExample" class="carousel slide">
+        
         <div class="carousel-inner">
 
             <div class="carousel-item active">
@@ -42,7 +42,7 @@
                     <div class="col-lg-5">
                         <img src="images/cazador.webp" class="img-carousel" alt="cazador">
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <div class="div-texto">
                             <h2 class="align-middle">El Cazador</h1>
                             <p class="align-middle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eaque saepe accusantium et ut, deserunt vitae laudantium accusamus quo molestiae excepturi maiores, obcaecati odit magnam explicabo repellat dolorem mollitia?</2>
@@ -56,7 +56,7 @@
                     <div class="col-lg-5">
                         <img src="images/guillermo.webp" class="img-carousel" alt="Guillermo">
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <div class="div-texto">
                             <h2 class="align-middle">El Caballero</h2>
                             <p class="align-middle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eaque saepe accusantium et ut, deserunt vitae laudantium accusamus quo molestiae excepturi maiores, obcaecati odit magnam explicabo repellat dolorem mollitia?</p>
@@ -70,7 +70,7 @@
                     <div class="col-lg-5">
                         <img src="images/marina-ansurez.webp" class="img-carousel" alt="Marina">
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <div class="div-texto">
                             <h2 class="align-middle">La Visitadora</h2>
                             <p class="align-middle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eaque saepe accusantium et ut, deserunt vitae laudantium accusamus quo molestiae excepturi maiores, obcaecati odit magnam explicabo repellat dolorem mollitia?</p>
@@ -84,7 +84,7 @@
                     <div class="col-lg-5">
                         <img src="images/inquisidor.webp" class="img-carousel" alt="Inquisidor">
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <div class="div-texto">
                             <h2 class="align-middle">El Inquisidor</h2>
                             <p class="align-middle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eaque saepe accusantium et ut, deserunt vitae laudantium accusamus quo molestiae excepturi maiores, obcaecati odit magnam explicabo repellat dolorem mollitia?</p>
@@ -103,7 +103,6 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-        </div>
     </div>
 
 
